--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="source_microphone">Microphone</string>
     <string name="source_voicerecognition">Voice Recognition</string>
     <string name="settings_audiosource">Audio Source</string>
+    <string name="settings_background">Run in the background</string>
     <string name="notificationChannel_main_title">Main Channel</string>
     <string name="notificationChannel_main_desc">whoBIRD Notifications</string>
     <string name="notification_message_ready">whoBIRD is ready.</string>
